[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trcargo"
dynamic = ["version"]
description = "Track packages from Turkish cargo companies."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "beucismis", email = "beucismis@tutamail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["requests==2.32.5", "beautifulsoup4==4.14.2"]

[project.urls]
Source = "https://github.com/beucismis/trcargo"
Issues = "https://github.com/beucismis/trcargo/issues"
Documentation = "https://github.com/beucismis/trcargo#readme"

[tool.hatch.version]
path = "src/trcargo/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest -s tests/* -v"
